--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-    <div class="swiper ofh container">
-        <div class="swiper-wrapper d-flex">
-            <div class="swiper-slide h300 w1200 red">1</div>
-            <div class="swiper-slide h300 w1200 yellow">2</div>
-            <div class="swiper-slide h300 w1200 green">3</div>
+    <div class="swiper ofh container ">
+        <div class="swiper-wrapper h300 rel">
+            <div class="swiper-slide h300 w1200 red abs act"><a href="http://www.naver.com">네이버</a></div>
+            <div class="swiper-slide h300 w1200 yellow abs"><a href="http://www.daum.net">다음</a></div>
+            <div class="swiper-slide h300 w1200 green abs"><a href="http://www.google.com">구글</a></div>
         </div>
     </div>
 </body>
